JDK25 removed jdk.internal.org.objectweb.asm package and classes
Modified the tests to use asm jar and its org.objectweb.asm.* classes to
accommodate all Java levels;
Disabled JavaAgentTest for JDK25+ temporarily;
Disabled lockWordAlignment "Check whether Object contains necessary
private fields if any" temporarily.

Signed-off-by: Jason Feng <fengj@ca.ibm.com>