@@ -51,19 +51,8 @@
 		<echo>===debug:                        on</echo>
 		<echo>===destdir:                      ${DEST}</echo>
 	
-		<if>
-			<equals arg1="${JDK_VERSION}" arg2="8"/>
-			<then>
-				<property name="addExports" value="" />
-			</then>
-			<else>
-				<property name="addExports" value="--add-exports java.base/jdk.internal.org.objectweb.asm=ALL-UNNAMED" />
-			</else>
-		</if>
-
 		<javac srcdir="${src}" destdir="${build}" debug="true" fork="true" executable="${compiler.javac}" includeAntRuntime="false" encoding="ISO-8859-1">
 			<src path="${src}" />
-			<compilerarg line="${addExports}" />
 			<classpath>
 				<pathelement location="${LIB_DIR}/asm-all.jar" />
 			</classpath>
